fix of excessive line spacing - LogViewer PF component (#273)

--- a/src/components/SystemDetails.scss
+++ b/src/components/SystemDetails.scss
@@ -36,3 +36,7 @@
     border-width: 2px;
     border-style: none solid solid solid;
 }
+
+.pf-c-log-viewer__index {
+    white-space: nowrap;
+}
